# finn-wsd-eval

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Pipfile  README.md  Snakefile  Snakefile.bs  baselines.py  compile_scorer.sh  ctx2vec.py  elmo.py  eval.py  eval_table.py  ims.py  install_powerai.sh  lesk.py  lesk_pp.py  limits.py  means.py  mk_test_as_train.py  nn.py  pyproject.toml  run_black.sh  setup.py  sup_corpus.py  supwsd.py  table.py  train_sif.py  ukb.py  utils.py  vec_nn_utils.py
fetchers/: ctx2vec.py  sif.py  supwsd.py  ukb.py
scripts/: bootstrap.py  conll17_to_plain.py  disp_all_pairs.py  eval.py  expc.py  limits.py  train_sif.py
support/context2vec/: test.py  train.py
support/context2vec/gpu/: Pipfile
support/context2vec/nogpu/: Pipfile
support/ims/: gradle.properties  test_ims.bash  train_ims.bash
support/supWSD/: jwnl-properties.xml.tmpl  supconfig.xml.tmpl
support/ukb/: prepare_wn30graph.sh
wsdeval/: expc.py  means.py  selectedexps.py  sup_corpus.py  tables.py  vec_nn_utils.py
wsdeval/exps/: base.py  confs.py  exps.py  utils.py
wsdeval/formats/: sup_corpus.py  supwsd.py  wordnet.py
wsdeval/nn/: new.py  old.py  vec_nn_common.py  vec_nn_new.py  vec_nn_old.py
wsdeval/systems/: baselines.py  bert2.py  ctx2vec.py  ctx2vec2.py  elmo.py  lesk.py  lesk_pp.py  limits.py  nn.py  sesame.py  supwsd.py  ukb.py
wsdeval/tools/: ctx_embedder.py  log.py  means.py  vec_nn.py
