[tool.poetry]
name = "wsdeval"
version = "0.0.2"
description = "WSD system evaluation Finnish"
authors = ["Frankie Robertson <frankie@robertson.name>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
stiff = {git = "https://github.com/frankier/STIFF.git",rev = "4bccff15ec1c4470e23cafe964c5b0855b703141"}
nltk = "==3.4"
tinydb = "*"
tinyrecord = "*"
dataclasses = "*"
hfst = {version = "*", allows-prereleases = true}
finntk = { git = "https://github.com/frankier/finntk.git", rev = "d26fbfcda0789cc212e48d4e78280d538116b63a" }
pyahocorasick = { git = "https://github.com/frankier/pyahocorasick.git", branch = "stiff-2018-09-20-3" }
torch = {version = "1.1.0", optional = true}
elmoformanylangs = {git = "https://github.com/frankier/ELMoForManyLangs.git",rev = "36ec6987e2d00baee6c364d151cd43b813c374a7", optional = true}
pytorch-pretrained-bert = {version = "*", optional = true}
snakemake = "^5.5"
expcomb = {git = "https://github.com/frankier/expcomb.git", rev = "ff7f1f5b7bd2e86284f5e0e68ed121e58f72f6ef"}
memory_tempfile = {git = "https://github.com/frankier/memory-tempfile.git", rev = "b76bda163a7614f5d0730d9619c79ec2d803db21"}
networkx = "^2.3"
pygraphviz = "^1.5"

[tool.poetry.extras]
gpu = ["elmoformanylangs", "torch", "pytorch-pretrained-bert"]

[tool.poetry.dev-dependencies]
flake8 = "^3.5.0"
black = "==18.9b0"
pre-commit = "^1.10.2"
pytest = "^4.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
