[tool.poetry]
name = "wsdeval"
version = "0.0.2"
description = "WSD system evaluation Finnish"
authors = ["Frankie Robertson <frankie@robertson.name>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
stiff = {git = "https://github.com/frankier/STIFF.git",rev = "4bccff15ec1c4470e23cafe964c5b0855b703141"}
nltk = "==3.4"
tinydb = "*"
tinyrecord = "*"
dataclasses = "*"
hfst = {version = "*", allows-prereleases = true}
finntk = ">=0.0.65"
pyahocorasick = { git = "https://github.com/frankier/pyahocorasick.git", branch = "stiff-2018-09-20-3" }
torch = {version = "1.1.0", optional = true}
elmoformanylangs = {git = "https://github.com/frankier/ELMoForManyLangs.git",rev = "36ec6987e2d00baee6c364d151cd43b813c374a7", optional = true}
pytorch-pretrained-bert = {version = "*", optional = true}
snakemake = "^5.5"
expcomb = {git = "https://github.com/frankier/expcomb.git", rev = "285af7c147b47db8e2e62111802cf59a9280336f"}
networkx = "^2.3"
pygraphviz = "^1.5"
lmdb = "^0.97.0"
transformers = "^2.1"
context2vec = {git = "https://github.com/orenmel/context2vec.git"}
chainer = "^6.5"

[tool.poetry.extras]
gpu = ["elmoformanylangs", "torch", "pytorch-pretrained-bert"]

[tool.poetry.dev-dependencies]
flake8 = "^3.5.0"
black = "==18.9b0"
pre-commit = "^1.10.2"
pytest = "^4.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
